Plotting change in perplexity on full test data

--- a/data_analysis/one_shot_word_analysis.Rmd
+++ b/data_analysis/one_shot_word_analysis.Rmd
@@ -423,7 +423,7 @@ for (word in words) {
     mutate(new_word=word) %>%
     select(-post_new_word_test_perp) %>%
     rename(post_withword_test_perp = pre_new_word_test_perp) %>%
-    mutate(withoutword_test_perp=head(this_d$pre_new_word_test_perp, n=1))
+    mutate(withoutword_test_perp=head(this_d$pre_new_word_test_perp, n=1), without_test_perp=head(this_d$pre_test_perp, n=1))
   withword_d = bind_rows(withword_d, this_d2)
 }
 
@@ -432,11 +432,11 @@ for (word in words) {
 # Data manipulation
 ```{r}
 d = d %>% 
-  mutate(nw_delta = post_new_word_test_perp - pre_new_word_test_perp, pct_delta=100*nw_delta/pre_new_word_test_perp, perm=factor(perm), train_with_word=F) %>%
+  mutate(nw_delta = post_new_word_test_perp - pre_new_word_test_perp, pct_delta=100*nw_delta/pre_new_word_test_perp, test_delta=post_test_perp - pre_test_perp, pct_test_delta = 100 * test_delta/pre_test_perp, perm=factor(perm), train_with_word=F) %>%
   mutate(approach=factor(approach, 
                          levels=c("centroid", "opt_centroid", "train_with_word"), 
                          labels=c("Centroid", "Optimizing from centroid", "Full training with the word")))
-withword_d = withword_d %>% mutate(nw_delta = post_withword_test_perp - withoutword_test_perp, pct_delta=100*nw_delta/withoutword_test_perp)
+withword_d = withword_d %>% mutate(nw_delta = post_withword_test_perp - withoutword_test_perp,  pct_delta=100*nw_delta/withoutword_test_perp, test_delta=post_test_perp - without_test_perp, pct_test_delta = 100 * test_delta/pre_test_perp)
 ```
 
 ```{r}
@@ -444,15 +444,15 @@ number_of_new_words = length(words)
 withword_d = withword_d[rep(1:number_of_new_words, each=10),]
 withword_d = withword_d %>%
   mutate(num_train=rep(1:10, number_of_new_words), approach='Full training with the word', train_with_word=T) %>%
-  select(num_train, approach, new_word, nw_delta, pct_delta, train_with_word)
+  select(num_train, approach, new_word, nw_delta, pct_delta, test_delta, pct_test_delta, train_with_word)
 avg_d = d %>% 
   group_by(num_train, approach, new_word, train_with_word) %>% 
-  summarize(nw_delta = mean(nw_delta), pct_delta=mean(pct_delta)) %>% 
+  summarize(nw_delta = mean(nw_delta), pct_delta=mean(pct_delta), test_delta=mean(test_delta), pct_test_delta=mean(pct_test_delta)) %>% 
   ungroup() %>% 
   rbind(., withword_d) %>%
   mutate(approach=factor(approach, 
-                         levels=c("Centroid", "Optimizing from centroid", "Full training with the word"), 
-                         labels=c("Centroid", "Optimizing from centroid", "Full training with the word")))
+                         levels=c("Centroid", "Optimizing from current", "Optimizing from centroid", "Optimizing from zero", "Full training with the word"), 
+                         labels=c("Centroid", "Optimizing from current", "Optimizing from centroid", "Optimizing from zero", "Full training with the word")))
 ```
 
 # Approach comparisons
@@ -464,42 +464,30 @@ ggplot() +
   facet_wrap(~ new_word) +
   xlab("Number of training sentences") +
   scale_x_continuous(breaks=1:10) +
-  scale_color_brewer(palette='Dark2') +
+  scale_color_brewer(palette='Dark2', drop=FALSE) +
   ylab("Change in perplexity on new word test data (%)") +
   guides(linetype=F) +
   theme_bw(base_size=12) +
   theme(panel.grid.minor=element_blank(), panel.grid.major=element_blank())
 ```
 ```{r}
-ggsave('../results/10perms_delta_perplexity.png', width=10, height=7)
+ggsave('../results/10perms2_delta_perplexity.png', width=10, height=7)
 ```
 
 ```{r}
-noword_withword_d = withword_d %>%
-  group_by(num_train, approach, train_with_word) %>% 
-  summarize(nw_delta = mean(nw_delta), pct_delta=mean(pct_delta)) %>% 
-  ungroup()
-noword_d = d %>% 
-  group_by(num_train, approach, train_with_word) %>% 
-  summarize(nw_delta = mean(nw_delta), pct_delta=mean(pct_delta)) %>% 
-  ungroup() %>%
-  bind_rows(., noword_withword_d) %>%
-  mutate(approach=factor(approach, 
-                         levels=c("Centroid", "Optimizing from current", "Optimizing from centroid", "Optimizing from zero", "Full training with the word"), 
-                         labels=c("Centroid", "Optimizing from current", "Optimizing from centroid", "Optimizing from zero", "Full training with the word")))
-```
-
-```{r, echo=FALSE, message=F}
 ggplot() +
-  geom_line(data=noword_d, aes(x=num_train, y=pct_delta, color=approach, linetype=train_with_word), size=1) +
+  geom_line(data=avg_d, aes(x=num_train, y=pct_test_delta, color=approach, linetype=train_with_word), size=1) +
+  geom_line(data=d, aes(x=num_train,y=pct_test_delta, color=approach, group=interaction(approach, perm)), alpha=0.25) +
+  facet_wrap(~ new_word) +
   xlab("Number of training sentences") +
   scale_x_continuous(breaks=1:10) +
-  scale_color_brewer(palette='Dark2') +
-  ylab("Change in perplexity on new word test data (%)") +
+  scale_color_brewer(palette='Dark2', drop=F) +
+  ylab("Change in perplexity on PTB test data (%)") +
   guides(linetype=F) +
   theme_bw(base_size=12) +
   theme(panel.grid.minor=element_blank(), panel.grid.major=element_blank())
 ```
+
 ```{r}
-ggsave('../results/10perms_delta_perplexity_summarized.png', width=10, height=7)
+ggsave('../results/10perms2_cost_to_others.png', width=10, height=7)
 ```
